<resources>
    <string name="app_name">GroupScheduler</string>
    <string name="schedule">Schedule</string>
    <string name="addevent">Add Event</string>
    <string name="events">Events</string>
    <string name="days">Day(s)</string>
    <string name="times">Times</string>
    <string name="days2">Day(s)</string>
    <string name="times2">Times</string>
    <string name="todo">TODO</string>
    <string name="month">Current Date</string>
    <string name="radiobtndays">Day(s)</string>
    <string name="radiobtndate">Date</string>
    <string name="radiobtnafter">After</string>
    <string name="radiobtnbefore">Before</string>
    <string name="radiobtnallday">All Day</string>
    <string name="or">OR</string>
    <string name="checkboxmonday">M</string>
    <string name="checkboxtuesday">T</string>
    <string name="checkboxwednesday">W</string>
    <string name="checkboxthursday">R</string>
    <string name="checkboxfriday">F</string>
    <string name="checkboxsaturday">S</string>
    <string name="checkboxsunday">U</string>
    <string name="period">Period</string>
    <string name="timePeriod" />
    <string name="notes" />
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="hh_mm">HH:MM</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="plannedEvents">Planned Events</string>
    <string name="mySchedule">My Schedule</string>
    <string name="timeNeeded">Time Needed</string>
    <string name="newevent">New Event</string>
    <string name="eventname">Event Name</string>
    <string name="min">min</string>
    <string name="hr">hr</string>
    <string name="planevent">Plan Event</string>
    <string name="event">Event</string>
    <string name="time">Time</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string-array name="period">
        <item>AM</item>
        <item>PM</item>
    </string-array>
</resources>