<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="412dp"
        android:layout_height="60dp"
        android:background="#c8c8c8"
        android:layout_marginEnd="500dp"
        android:fontFamily="serif"
        android:lineSpacingExtra="18sp"
        android:text="@string/addevent"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#090909"
        android:padding="15dp"
        android:typeface="serif"
        android:visibility="visible" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radio_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobtndays" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox android:id="@+id/monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkboxmonday" />
            <CheckBox android:id="@+id/tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkboxtuesday" />
            <CheckBox android:id="@+id/wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkboxwednesday" />
            <CheckBox android:id="@+id/thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkboxthursday" />
            <CheckBox android:id="@+id/friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkboxfriday" />
            <CheckBox android:id="@+id/saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkboxsaturday" />
            <CheckBox android:id="@+id/sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkboxsunday" />
        </LinearLayout>


        <TextView
            android:id="@+id/OR"
            android:layout_width="412dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="500dp"
            android:fontFamily="serif"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="#090909"
            android:typeface="serif"
            android:visibility="visible" />

        <RadioButton
            android:id="@+id/radio_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobtndate" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="date" />
    </RadioGroup>
</LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:typeface="serif"
        android:fontFamily="serif" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radio_after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobtnafter" />
        <RadioButton
            android:id="@+id/radio_before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobtnbefore" />
        <RadioButton
            android:id="@+id/radio_allday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobtnallday" />
    </RadioGroup>
</LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:ems="5"
        android:text="12:00"
        android:textAlignment="center"
        android:inputType="time" />

        <Spinner
            android:id="@+id/period"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:prompt="@string/timePeriod" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/addevent" />

</LinearLayout>