<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#c8c8c8">

        <!-- Add Event textview -->
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:background="#c8c8c8"
            android:layout_marginEnd="500dp"
            android:fontFamily="serif"
            android:lineSpacingExtra="18sp"
            android:text="@string/planevent"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#090909"
            android:padding="15dp"
            android:typeface="serif"
            android:visibility="visible"/>

        <!-- close imagebutton -->
        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:paddingRight="15dp"
            android:background="#c8c8c8"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:lineSpacingExtra="18sp"
            android:text="@string/event"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#090909"
            android:textSize="18dp"
            android:typeface="serif"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/planeventname"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:background="#22000000"
            android:layout_marginStart="94dp"
            android:layout_marginTop="20dp"
            android:prompt="@string/eventname" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:lineSpacingExtra="18sp"
            android:text="@string/eventname"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#090909"
            android:textSize="18dp"
            android:typeface="serif"
            android:visibility="visible" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:background="#22000000"
            android:hint="@string/dd_mm_yyyy"
            android:ems="5"
            android:enabled="false"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:lineSpacingExtra="18sp"
            android:text="@string/time"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#090909"
            android:textSize="18dp"
            android:typeface="serif"
            android:visibility="visible" />

        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="105dp"
            android:layout_marginTop="20dp"
            android:background="#22000000"
            android:ems="5"
            android:hint="@string/hh_mm"
            android:inputType="time"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/period"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:prompt="@string/timePeriod" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:lineSpacingExtra="18sp"
            android:text="@string/address"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#090909"
            android:textSize="18dp"
            android:typeface="serif"
            android:visibility="visible" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:background="#22000000"
            android:ems="10"
            android:inputType="textPersonName"
            android:prompt="@string/address" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:lineSpacingExtra="18sp"
            android:text="@string/city"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#090909"
            android:textSize="18dp"
            android:typeface="serif"
            android:visibility="visible" />

        <EditText
            android:id="@+id/city"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp"
            android:background="#22000000"
            android:ems="10"
            android:inputType="textPersonName"
            android:prompt="@string/city" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:lineSpacingExtra="18sp"
            android:text="@string/state"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#090909"
            android:textSize="18dp"
            android:typeface="serif"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/state"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginStart="125dp"
            android:layout_marginTop="20dp"
            android:background="#22000000"
            android:prompt="@string/state" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:lineSpacingExtra="18sp"
            android:text="@string/zip"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#090909"
            android:textSize="18dp"
            android:typeface="serif"
            android:visibility="visible" />

        <EditText
            android:id="@+id/editTextTextPostalAddress"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="20dp"
            android:background="#22000000"
            android:ems="10"
            android:inputType="textPostalAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:lineSpacingExtra="18sp"
            android:text="@string/address"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#090909"
            android:textSize="18dp"
            android:typeface="serif"
            android:visibility="visible" />

        <EditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:background="#22000000"
            android:ems="10"
            android:inputType="textPersonName"
            android:prompt="@string/notes" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAddEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/addevent" />

</LinearLayout>