<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:lineSpacingExtra="18sp"
        android:text="@string/schedule"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#090909"
        android:background="#c8c8c8"
        android:padding="15dp"
        android:textSize="24sp"
        android:typeface="serif"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="426dp">

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="40dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:lineSpacingExtra="18sp"
        android:text="@string/events"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#090909"
        android:padding="5dp"
        android:textSize="20sp"
        android:typeface="serif"
        android:visibility="visible"
        android:layout_marginTop="425dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:lineSpacingExtra="18sp"
        android:text="@string/days"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#090909"
        android:textSize="15sp"
        android:typeface="serif"
        android:visibility="visible"
        android:layout_marginTop="465dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="330dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:lineSpacingExtra="18sp"
        android:text="@string/times"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#090909"
        android:textSize="15sp"
        android:typeface="serif"
        android:visibility="visible"
        android:layout_marginTop="465dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="250dp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:lineSpacingExtra="18sp"
        android:text="@string/days2"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#090909"
        android:textSize="15sp"
        android:typeface="serif"
        android:visibility="visible"
        android:layout_marginTop="465dp"
        android:layout_marginStart="215dp"
        android:layout_marginEnd="125dp"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:lineSpacingExtra="18sp"
        android:text="@string/times2"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#090909"
        android:textSize="15sp"
        android:typeface="serif"
        android:visibility="visible"
        android:layout_marginTop="465dp"
        android:layout_marginStart="295dp"
        android:layout_marginEnd="45dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginTop="664dp"
        android:background="#c8c8c8"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/friendsButton"
            android:layout_width="61dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_friends" />

        <ImageButton
            android:id="@+id/groupsButton"
            android:layout_width="66dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_group" />

        <ImageButton
            android:id="@+id/addEventButton"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_event" />

        <ImageButton
            android:id="@+id/scheduleButton"
            android:layout_width="63dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_schedule" />

        <ImageButton
            android:id="@+id/accountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher"
            android:contentDescription="@string/todo" />
    </LinearLayout>

</FrameLayout>
