<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#c8c8c8">

        <!-- Add Event textview -->
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:background="#c8c8c8"
            android:layout_marginEnd="500dp"
            android:fontFamily="serif"
            android:lineSpacingExtra="18sp"
            android:text="@string/newevent"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#090909"
            android:padding="15dp"
            android:typeface="serif"
            android:visibility="visible"/>

        <!-- close imagebutton -->
        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:paddingRight="15dp"
            android:background="#c8c8c8"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:lineSpacingExtra="18sp"
            android:text="@string/eventname"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#090909"
            android:textSize="18dp"
            android:typeface="serif"
            android:visibility="visible" />

        <EditText
            android:id="@+id/eventNametxtbox"
            android:layout_width="130dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:lineSpacingExtra="18sp"
            android:text="@string/timeNeeded"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#090909"
            android:textSize="18dp"
            android:typeface="serif"
            android:visibility="visible" />

        <EditText
            android:id="@+id/hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:ems="2"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:lineSpacingExtra="18sp"
            android:text="@string/hr"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#090909"
            android:textSize="18dp"
            android:typeface="serif"
            android:visibility="visible" />

        <EditText
            android:id="@+id/minutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:ems="2"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:lineSpacingExtra="18sp"
            android:text="@string/min"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#090909"
            android:textSize="18dp"
            android:typeface="serif"
            android:visibility="visible" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAddEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/addevent" />

</LinearLayout>